# chessengine

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  refactor.md
.github/actions/: action.yml
.github/workflows/: build_and_test.yml  c-cpp.yml  cpp-linter.yml
src/: CMakeLists.txt  board.cpp  board.hpp  main.cpp  piece.cpp  piece.hpp  player.cpp  player.hpp
tests/: CMakeLists.txt  test.cpp
